# arbitrage

./: .env.example  .gitignore  Cargo.toml  README.md  binance_feed.py  config.py  edge_detector.py  main.py  polymarket_client.py  pyrightconfig.json  requirements.txt  risk_manager.py  settlement_monitor.py  trader.py
src/: binance_feed.rs  config.rs  edge_detector.rs  main.rs  polymarket_client.rs  risk_manager.rs  settlement_monitor.rs  trader.rs  types.rs
